# InstaShadow

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.gitea/workflows/: build.yml
.github/workflows/: build.yml
Source/: CompressorEngine.cpp  CompressorEngine.h  DiscretePanel.cpp  DiscretePanel.h  GRMeter.h  LookAndFeel.cpp  LookAndFeel.h  NeedleVuMeter.h  OpticalCell.cpp  OpticalCell.h  OpticalPanel.cpp  OpticalPanel.h  OutputPanel.cpp  OutputPanel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TransformerPanel.cpp  TransformerPanel.h  TransformerSaturation.cpp  TransformerSaturation.h  VCACompressor.cpp  VCACompressor.h  VuMeter.h
